<resources>
    <string name="app_name">读报助手</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="password_hint">请输入原密码&#8230;</string>
    <string name="password_hint_new">请输入新密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login_age">请输入年龄</string>
    <string name="login_sex_male">男</string>
    <string name="login_sex_female">女</string>
    <string name="login_record">请输入病历（患者填写）&#8230;</string>
    <string name="login_department">请输入科室（医生填写）&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_timetable">语音读报</string>
    <string name="main_tab_task">预留</string>
    <string name="mian_tab_set">用户</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="task_topic">主题</string>
    <string name="task_content">内容</string>
    <string name="task_upload">上传附件</string>
    <string name="task_score">分数</string>
    <string name="task_publish">提交任务</string>
    <string name="task_update">更改任务</string>
    <string name="task_target">接收人</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>
    <string name="edit">修改资料</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>
    <string name="set_pwd">修改密码</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>

    <string name="role_teacher">老师</string>
    <string name="role_stu">学生</string>

    <string name="info_sex">性别</string>
    <string name="info_age">年龄</string>

    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="cycle_sure">确定</string>
    <string name="vibration">震动</string>
    <string name="ring">铃声</string>

</resources>
