<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg" >

    <include layout="@layout/include_navi"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <RadioGroup
            android:visibility="gone"
            android:id="@+id/rg"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/role_stu" />
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/role_teacher" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_sex_male" />
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_sex_female" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_account"
            android:drawablePadding="25dip"
            android:hint="@string/login_username_hint"
            android:paddingLeft="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />
        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_email_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />
        <EditText
            android:id="@+id/et_age"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_write"
            android:drawablePadding="25dip"
            android:inputType="number"
            android:hint="@string/login_age"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>