<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg" >

    <include layout="@layout/include_navi"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />
        <EditText
            android:id="@+id/et_password_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_write"
            android:drawablePadding="25dip"
            android:hint="@string/password_hint_new"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/set_pwd"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>