<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_navi"/>

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_top_bg"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_avator" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_avator"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/height_50"
                android:layout_height="@dimen/height_50"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_12"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="20dp"
                android:src="@mipmap/head" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_name" />

        <EditText
            android:id="@+id/tv_name"
            style="@style/style_text_black"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/info_sex" />

        <TextView
            android:id="@+id/tv_sex"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/info_age" />

        <EditText
            android:id="@+id/tv_age"
            android:background="@null"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_other_title"
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_marginLeft="30dp"
            android:id="@+id/tv_other"
            android:gravity="end"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />
    </RelativeLayout>

    <!--<Button
        android:id="@+id/btn_add_friend"
        style="@style/style_text_white"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_friend"
        />-->

    <Button
        android:id="@+id/btn_chat"
        style="@style/style_text_white"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/chat" />
    <Button
        android:id="@+id/btn_edit"
        style="@style/style_text_white"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit" />

</LinearLayout>